# mingcha

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.crv/: providers.yaml.example
backend/: diagnose_llm.py  pyproject.toml
backend/app/: __init__.py  answer_out.py  keys.py  main.py  schemas.py  security.py  service.py  settings.py  task_manager.py
backend/app/routers/: meta.py  tasks.py
backend/tests/: test_api_smoke.py  test_plate_answer.py
docs/: README.md  使用手册.md  前后端分离-启动指南.md  前后端分离-详细设计文档.md  功能详解-小白版.md  实现进度.md  快速入手.md  视频智能体-详细设计文档.md  视频智能体-需求文档.md  车牌识别高亮追踪-详细设计文档.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts  sse.ts
frontend/src/components/: IntentPicker.tsx  KeyPanel.tsx  ProgressView.tsx  ResultView.tsx  SourceInput.tsx
frontend/src/store/: store.ts
src/mingcha/: __init__.py  __main__.py  _log.py  annotate.py  assembler.py  cli.py  intent.py  media.py  orchestrator.py  planner.py  preprocess.py  prompts.py  rescan.py  similarity.py  timestamps.py  types.py
src/mingcha/analyzer/: __init__.py  locate.py  moderate.py  plate.py  summary.py  visual.py
src/mingcha/llm/: __init__.py  anthropic.py  base.py  batch.py  openai_compat.py  structured.py
src/mingcha/plate/: __init__.py  boxes.py  detect.py  engine.py  fuse.py  ocr.py  preprocess_img.py  superres.py  track.py  vehicle.py  vlm_fallback.py
tests/: test_plate_enhance.py  test_plate_fuse.py  test_plate_smoke.py  test_plate_track.py  test_plate_vehicle.py  test_smoke_summary.py  test_structured.py  test_timestamps.py
